--- a/popup.html
+++ b/popup.html
@@ -1,19 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Content Blocker</title>
-  <style>
-    body {
-      min-width: 250px;
-      padding: 10px;
-    }
-  </style>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <link rel="stylesheet" href="popup.css" />
 </head>
 <body>
-<h3>Content Blocker</h3>
-<input type="text" id="keyword" placeholder="Enter keyword">
-<button id="addKeyword">Add Keyword</button>
-<ul id="keywordList"></ul>
+<div class="header flex flex-row">
+  <h3>Content Blocker</h3>
+  <!--<label class="switch"> TODO: We should store value if Content blocker is ON/OFF
+    <input type="checkbox">
+    <span class="slider round"></span>
+  </label>-->
+</div>
+<div class="form flex flex-row">
+  <input class="input" type="text" id="keyword" placeholder="Enter keyword">
+  <button class="button" id="addKeyword">Add Keyword</button>
+</div>
+<ul class="item-list" id="keywordList"></ul>
+
 <script src="popup.js"></script>
 </body>
 </html>
